DM2-984
Crear endpoints para enlistar usuarios y buscar por usuario
