# routes/api.php
@@ -22,7 +22,7 @@ use Illuminate\Support\Facades\Route;
   //  return $request->user();
 //});
 
-Route::group(['middleware'=>['auth:sanctum']],function () {
+//Route::group(['middleware'=>['auth:sanctum']],function () {
 
     Route::get('/actors', [\App\Http\Controllers\ActorController::class, 'index']);
     Route::get('/actors/{actor}', [\App\Http\Controllers\ActorController::class, 'show']);
@@ -56,14 +56,17 @@ Route::group(['middleware'=>['auth:sanctum']],function () {
     Route::post('movies/{movie}/rents', [MovieRentController::class, 'add']);
     Route::delete('movies/{movie}/rents', [MovieRentController::class, 'remove']);
 
-    Route::post('/user', [\App\Http\Controllers\UserController::class, 'store']);
-
+    Route::get('/users', [\App\Http\Controllers\UserController::class, 'index']);
+    Route::get('/user/{user}', [\App\Http\Controllers\UserController::class, 'show']);
     Route::put('/auth/{user}', [AuthController::class, 'update']);
     Route::delete('/auth/{user}', [AuthController::class, 'destroy']);
 
-});
+//});
 
 Route::post('auth',[AuthController::class,'login']);
+Route::post('register',[AuthController::class,'register']);
+
+
 
 
 
